Implemented new endpoints. Refactor.